crates/mys/tests/snapshots/ptb_files_tests__publish_non_existent_package.ptb.snap
---
source: crates/mys/tests/ptb_files_tests.rs
expression: "results.join(\"\\n\")"
---
 === PREVIEW === 
╭───────────────────────────╮
│ PTB Preview               │
├─────────┬─────────────────┤
│ command │ values          │
├─────────┼─────────────────┤
│ publish │ not_a_valid_pkg │
╰─────────┴─────────────────╯
 === BUILDING PTB ERRORS === 
  × Error when processing PTB
   ╭────
 1 │ --publish not_a_valid_pkg 
   · ────────────┬────────────
   ·             ╰── No such file or directory (os error 2)
   ╰────

