crates/mys/tests/snapshots/ptb_files_tests__publish_valid.ptb.snap
---
source: crates/mys/tests/ptb_files_tests.rs
expression: "results.join(\"\\n\")"
---
 === PREVIEW === 
╭────────────────────────────────────────────╮
│ PTB Preview                                │
├─────────┬──────────────────────────────────┤
│ command │ values                           │
├─────────┼──────────────────────────────────┤
│ publish │ tests/ptb_files/publish/test_pkg │
╰─────────┴──────────────────────────────────╯
 === BUILT PTB === 
Command 0: Publish(_,)
